# ffi-gen

./: Cargo.toml  rust-toolchain.toml
.github/workflows/: ci.yml
example/: Cargo.toml
example/src/: lib.rs
macro/: Cargo.toml
src/: abi.rs  dart.rs  js.rs  lib.rs  rust.rs
src/abi/: export.rs  import.rs
tests/: finalizers.rs  object.rs
