[workspace]
members = [".", "macro", "example"]

[package]
name = "ffi-gen"
version = "0.1.13"
edition = "2021"
description = "Call rust from any language."
repository = "https://github.com/cloudpeers/ffi-gen"
license = "MIT"

[features]
default = []
test_runner = ["tempfile", "trybuild"]

[dependencies]
anyhow = "1.0.79"
genco = { git = "https://github.com/udoprog/genco", branch = "proc-macro-span" }
heck = "0.4.1"
pest = "2.7.6"
pest_derive = "2.7.6"
tempfile = { version = "3.9.0", optional = true }
trybuild = { version = "1.0.89", optional = true }

[dependencies.wasm-bindgen]
version = "0.2.90"
optional = true

[dev-dependencies]
ffi-gen = { path = ".", features = ["test_runner"] }
futures = "0.3.30"
