[package]
name = "api"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[build_dependencies]
ffi-gen = { version = "0.1.0", path = ".." }

[dependencies]
anyhow = "1.0.79"
ffi-gen = { version = "0.1.0", path = ".." }
ffi-gen-macro = { version = "0.1.0", path = "../macro" }
futures = "0.3.30"
ureq = "2.9.1"
paste = "1.0.14"